C2LC-333: Fixed vertical alignment of keyboard input toggle switch.

--- a/src/KeyboardInputModal.scss
+++ b/src/KeyboardInputModal.scss
@@ -60,6 +60,8 @@
     .ToggleSwitch__switch-inner-circle {
         height: 1.9rem;
         width: 1.9rem;
+        margin-bottom: inherit;
+        margin-top: inherit;
     }
 }
 
